[project]
name = "carpenter"
version = "0.0.1"
dependencies = [
  "pyyaml",
]
requires-python = ">=3.10"
description = "FPGA DO programmer"
readme = "README.md"
keywords = ["build",]
classifiers = [
  "Development Status :: 0 - Alpha",
  "Programming Language :: Python"
]

[project.scripts]
carpenter = "carpenter:main"

